--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,12 +44,13 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_languages: yes
+          plugin_languages_indepth: yes
           plugin_languages_analysis_timeout: 5
           plugin_languages_analysis_timeout_repositories: 15
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_ignored: CMake, html, css
-          plugin_languages_limit: 10
+          plugin_languages_limit: 15
           plugin_languages_other: yes
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
